# mklab

./: .gitignore  ALMALINUX_PXE_LAB_PLAN.md  AUDIT.md  CLAUDE.md  KALI_LLM_LAB_PLAN.md  LICENSE  MANUAL_TESTING.md  METAL_AS_A_SERVICE_LAB_PLAN.md  MICRO_LINUX_LAB_PLAN.md  NETBOOT_LAB_PLAN.md  PLAN.md  RAM_INFRA_LAB_PLAN.md  README.md  RESILIENT_REGION_LAB_PLAN.md  REVIEW-phase6.md  REVIEW-phases-1-5.md  SECURITY_RANGE_LAB_PLAN.md  TODO.md  hosts
examples/: 00-INDEX.md  (+56 more)
phase6-tui/: MANUAL_TESTING.md  README.md  SHOWCASE.md  pyproject.toml
phase6-tui/lab_tui/: __init__.py  __main__.py  app.py  state.py  topology.py
phase6-tui/lab_tui/backends/: __init__.py  base.py  chroot.py  docker.py  lxd.py  podman.py  vm.py
phase6-tui/lab_tui/screens/: browser.py  confirm.py  logs.py  topology.py  wizard_select.py
phase6-tui/lab_tui/widgets/: status_pill.py
phase6-tui/tests/: conftest.py  test_app_pilot.py  test_backends_chroot.py  test_backends_docker.py  test_backends_lxd.py  test_backends_podman.py  test_backends_vm.py  test_console_attach.py  test_docs_reflect_shipped_features.py  test_run_capture_env_scrub.py  test_run_capture_timeout.py  test_state.py  test_toml_str_escaping.py  test_topology.py  test_topology_hostile_input.py  test_wizards.py
phase6-tui/tests/fixtures/: chroot-debian-bookworm.toml  chroot-orphan.toml  docker-ps.txt  lxd-list.json  podman-pod-ps.json  podman-ps.json  vm-alpine-manifest.toml
phase6b-web/: MANUAL_TESTING.md  README.md  pyproject.toml
phase6b-web/lab_web/: __main__.py  app.py
phase6b-web/tests/: conftest.py  test_routes.py
(+926 files in other folders)
