[project]
name = "lab-web"
version = "0.1.0"
description = "Phase 6b of LAB_CREATE_V2 — FastAPI + HTMX web UI over the same backends"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "lab-tui",
    "fastapi[standard]>=0.110",
    "jinja2>=3.1",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
lab-web = "lab_web.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lab_web"]

[tool.uv.sources]
lab-tui = { path = "../phase6-tui", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
